# autovec-proc-macro

./: Cargo.toml  README.md
example/: Cargo.toml
example/src/: main.rs
example/tests/: test-1.rs  test-should-panic.rs  test-slice.rs  test-tuple-struct.rs  test-tuple.rs
src/: lib.rs
tests/: compile-test-01.rs  compile-test-generic.rs  compile-test-no-args.rs  compile-test-no-args.stderr  compile-test-no-return.rs  compile-test-no-return.stderr  compile-test-slice-pat.rs  compile-test-struct.rs  compile-test-tuple-struct.rs  compile-test-tuple.rs  compile-test-wild-card.rs  init.rs
