[package]
name = "autovec"
version = "0.1.0"
authors = ["Vishnunarayan K I <appukuttancr@gmail.com>"]
edition = "2018"
autotests = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0.41", features = ["extra-traits", "full", "fold"] }
quote = "1.0"
proc-macro2 = "1.0"
itertools = "0.9"

[[test]]
name = "tests"
path = "tests/init.rs"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }
